--- a/index.html
+++ b/index.html
@@ -881,23 +881,11 @@
                 <i class="bx bx-chevron-left"></i>
                 Go Back
               </li>
-              <li><a href="#">Application
-                Design and Development Solutions</a></li>
-              <li><a href="#">Cloud
-                Management
-                Services</a></li>
-              <li><a href="#">Digital
-                Marketing</a></li>
-              <li><a href="#">Analytics</a></li>
-              <li><a href="#">Full
-                Stack
-                Development</a></li>
-              <li><a href="#">CRM Development
-                Services
-              </a></li>
-              <li><a href="#">Enterprise
-                Application Integration Services
-              </a></li>
+              <li><a href="#">Data Entry</a></li>
+              <li><a href="#">Data Processing</a></li>
+              <li><a href="#">Data Analytics</a></li>
+              <li><a href="#">Data Catalog Management</a></li>
+              <li><a href="#">Forms Processing</a></li>
             </ul>
           </li>
           <li></li>
