--- a/index.html
+++ b/index.html
@@ -881,6 +881,27 @@
                 <i class="bx bx-chevron-left"></i>
                 Go Back
               </li>
+              <li>
+                <div class="openLevel js-openLevel">
+                  <a href="finance-accounting.html" class="p-0">
+                    Data Entry
+                  </a>
+                  <i class="bx bx-chevron-right"></i>    
+                </div>
+                <ul class="pushNav pushNav_level js-pushNavLevel">
+                  <li class="closeLevel js-closeLevel hdg">
+                    <i class="bx bx-chevron-left"></i>
+                    Go Back
+                  </li>
+                  <li><a href="account-payable.html">Account Payable Services</a></li>
+                  <li><a href="">Account Receivable Services</a></li>
+                  <li><a href="#">Bookkeeping</a></li>
+                  <li><a href="#">Tax Preparation</a></li>
+                  <li><a href="#">Reconciliation</a></li>
+                  <li><a href="#">Payroll</a></li>
+                  <li><a href="#">Financial Reporting</a></li>
+                </ul>
+              </li>
               <li><a href="#">Data Entry</a></li>
               <li><a href="#">Data Processing</a></li>
               <li><a href="#">Data Analytics</a></li>
@@ -923,8 +944,6 @@
               <li><a href="#">Timely Status Update </a></li>
             </ul>
           </li>
-          <li><a href="#">Link to page three</a></li>
-          <li><a href="#">Link to page four</a></li>
         </ul>
       </li>
       <!-- End section 1 -->
