--- a/index.html
+++ b/index.html
@@ -878,8 +878,7 @@
             </div>
             <ul class="pushNav pushNav_level js-pushNavLevel">
               <li class="closeLevel js-closeLevel hdg">
-                <i class="bx bx-chevron-left"></i>
-                Go Back
+                <i class="bx bx-chevron-left"></i>Go Back
               </li>
               <li>
                 <div class="openLevel js-openLevel">
