Data entry Menu updated

--- a/index.html
+++ b/index.html
@@ -892,16 +892,13 @@
                     <i class="bx bx-chevron-left"></i>
                     Go Back
                   </li>
-                  <li><a href="account-payable.html">Account Payable Services</a></li>
-                  <li><a href="">Account Receivable Services</a></li>
-                  <li><a href="#">Bookkeeping</a></li>
-                  <li><a href="#">Tax Preparation</a></li>
-                  <li><a href="#">Reconciliation</a></li>
-                  <li><a href="#">Payroll</a></li>
-                  <li><a href="#">Financial Reporting</a></li>
+                  <li><a href="">E-com data entry</a></li>
+                  <li><a href="">Real Estate</a></li>
+                  <li><a href="#">Restaurant</a></li>
+                  <li><a href="#">Accounting</a></li>
+                  <li><a href="#">Bill of Lading</a></li>
                 </ul>
               </li>
-              <li><a href="#">Data Entry</a></li>
               <li><a href="#">Data Processing</a></li>
               <li><a href="#">Data Analytics</a></li>
               <li><a href="#">Data Catalog Management</a></li>
