--- a/index.html
+++ b/index.html
@@ -873,6 +873,32 @@
           </li>
           <li>
             <div class="openLevel js-openLevel">
+              <a href="finance-accounting.html" class="p-0">
+                Insurance BPO
+              </a>
+              <i class="bx bx-chevron-right"></i>
+
+            </div>
+            <ul class="pushNav pushNav_level js-pushNavLevel">
+              <li class="closeLevel js-closeLevel hdg">
+                <i class="bx bx-chevron-left"></i>
+                Go Back
+              </li>
+              <li><a href="account-payable.html">Underwriting Support</a></li>
+              <li><a href="">Policy Maintenance</a></li>
+              <li><a href="#">New Business
+                Services</a></li>
+              <li><a href="#">Claim Management</a></li>
+              <li><a href="#">Commission
+                Management</a></li>
+              <li><a href="#">Insurance
+                Data Entry</a></li>
+              <li><a href="#">Insurance
+                Reporting</a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="openLevel js-openLevel">
               Data Management
               <i class="bx bx-chevron-right"></i>
             </div>
@@ -905,7 +931,6 @@
               <li><a href="#">Forms Processing</a></li>
             </ul>
           </li>
-          <li></li>
           <li>
             <div class="openLevel js-openLevel">
               Mortgage Services
