--- a/index.html
+++ b/index.html
@@ -887,14 +887,14 @@
               <li><a href="account-payable.html">Underwriting Support</a></li>
               <li><a href="">Policy Maintenance</a></li>
               <li><a href="#">New Business
-                Services</a></li>
+                  Services</a></li>
               <li><a href="#">Claim Management</a></li>
               <li><a href="#">Commission
-                Management</a></li>
+                  Management</a></li>
               <li><a href="#">Insurance
-                Data Entry</a></li>
+                  Data Entry</a></li>
               <li><a href="#">Insurance
-                Reporting</a></li>
+                  Reporting</a></li>
             </ul>
           </li>
           <li>
@@ -911,7 +911,7 @@
                   <a href="finance-accounting.html" class="p-0">
                     Data Entry
                   </a>
-                  <i class="bx bx-chevron-right"></i>    
+                  <i class="bx bx-chevron-right"></i>
                 </div>
                 <ul class="pushNav pushNav_level js-pushNavLevel">
                   <li class="closeLevel js-closeLevel hdg">
@@ -929,6 +929,33 @@
               <li><a href="#">Data Analytics</a></li>
               <li><a href="#">Data Catalog Management</a></li>
               <li><a href="#">Forms Processing</a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="openLevel js-openLevel">
+              Technology Solutions
+              <i class="bx bx-chevron-right"></i>
+            </div>
+            <ul class="pushNav pushNav_level js-pushNavLevel">
+              <li class="closeLevel js-closeLevel hdg">
+                <i class="bx bx-chevron-left"></i>
+                Go Back
+              </li>
+              <li><a href="#">Application
+                  Design and Development Solutions</a></li>
+              <li><a href="#">Cloud
+                  Management
+                  Services</a></li>
+              <li><a href="#">Digital
+                  Marketing</a></li>
+              <li><a href="#">Analytics</a></li>
+              <li><a href="#">Full
+                  Stack
+                  Development</a></li>
+              <li><a href="#">CRM Development
+                  Services</a></li>
+              <li><a href="#">Enterprise
+                  Application Integration Services</a></li>
             </ul>
           </li>
           <li>
