--- a/index.html
+++ b/index.html
@@ -1137,13 +1137,13 @@
   <div class="logo-area shadow">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-3">
+        <div class="col-xl-3 col-lg-3 col-sm-12">
           <div class="logo-text boomX">
             <h3 class="boomQuote">Start A Free Trial</h3>
           </div>
         </div>
 
-        <div class="col-lg-9">
+        <div class="col-xl-9 col-lg-9 col-sm-12">
           <form class="d-flex ctaform" method="POST" name="quoteform" action="quote.php">
             <input class="shadow-sm form-control" name="name" type="text" placeholder="Name" />
             <input class="shadow-sm form-control" name="email" type="email" placeholder="Email" />
@@ -1162,7 +1162,7 @@
   <section class="about-area pt-100 pb-100">
     <div class="container">
       <div class="row align-items-center mobile-reverse">
-        <div class="col-lg-7">
+        <div class="col-xl-7 col-lg-12">
           <div class="about-content">
             <div class="section-title">
               <span class="sub-title-about">About</span>
@@ -1257,7 +1257,7 @@
           </div>
         </div>
 
-        <div class="col-lg-5">
+        <div class="col-xl-5 col-lg-12">
           <div class="about-img">
             <div class="row align-items-end">
               <div class="col-sm-6 col-lg-6 mobile-dnone">
@@ -1763,7 +1763,7 @@
       </div>
 
       <div class="row align-items-center">
-        <div class="col-lg-6">
+        <div class="col-xl-6 col-lg-12">
           <div class="blog-item">
             <a href="blog-details.html">
               <img src="assets/img/blog/blog1.jpg" alt="Blog" />
@@ -1792,7 +1792,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-xl-6 col-lg-12">
           <div class="blog-side-item">
             <ul class="align-items-center">
               <li>
@@ -1883,7 +1883,7 @@
       </div>
 
       <div class="row dsd">
-        <div class="col-lg-6">
+        <div class="col-xl-6 col-lg-12">
           <div class="boomRow d-flex">
             <div class="card boomAddressCard shadow">
               <img class="home-icon" src="./assets/images/icons/location.png" alt="">
@@ -1928,7 +1928,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6 col-lg-12">
           <form class="ctz shadow">
             <h3>Get in touch</h3>
             <div class="mb-3">
